--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		{
 			var func = function(xmlHttpResponse)
 			{
-				document.getElementById("htmlbody").innerHTML += xmlHttpResponse;
+				document.getElementById("htmlbody").innerHTML = xmlHttpResponse;
 			}
 			LoadPageAjax(func, "mainpages/blog.html", false);
 			LoadPages();
@@ -52,7 +52,6 @@
 				else if (xmlHttp.status == 404)
 				{
 					behaviorFunction("Error.");
-					document.getElementById(divId).innerHTML += "Error.";
 				}
 			}
 			xmlHttp.open("GET", pageName, isAsync);
