--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 		<button onclick = "LoadBlog();">
 			Blog
 		</button>
+		<button onclick = "LoadPortfolio();">
+			Portfolio
+		</button>
 	</body>
 	<script type="text/javascript">
 		function LoadPortfolio()
