--- a/mainpages/blog.html
+++ b/mainpages/blog.html
@@ -1,6 +1,9 @@
 <button onclick = "LoadBlog();">
     Blog
 </button>
+<button onclick = "LoadPortfolio();">
+    Portfolio
+</button>
 <div id="personalInfo">
     <h1>
         Dylan's First Year Experience!
