--- a/mainpages/blog.html
+++ b/mainpages/blog.html
@@ -1,9 +1,11 @@
-<button onclick = "LoadBlog();">
-    Blog
-</button>
-<button onclick = "LoadPortfolio();">
-    Portfolio
-</button>
+<div class = buttons>
+    <button onclick = "LoadBlog();">
+        Blog
+    </button>
+    <button onclick = "LoadPortfolio();">
+        Portfolio
+    </button>
+</div>
 <div id="personalInfo">
     <h1>
         Dylan's First Year Experience!
