--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body id = "htmlbody">
-		<button onclick = "LoadBlog();">
-			Blog
-		</button>
-		<button onclick = "LoadPortfolio();">
-			Portfolio
-		</button>
+		<div class = buttons>
+			<button onclick = "LoadBlog();">
+				Blog
+			</button>
+			<button onclick = "LoadPortfolio();">
+				Portfolio
+			</button>
+		</div>
 	</body>
 	<script type="text/javascript">
 		function LoadPortfolio()
