--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body id = "htmlbody">
-		<div class = buttons>
+		<div class = "buttons">
 			<button onclick = "LoadBlog();">
 				Blog
 			</button>
