--- a/mainpages/blog.html
+++ b/mainpages/blog.html
@@ -5,7 +5,7 @@
     <button onclick = "LoadPortfolio();">
         Portfolio
     </button>
-    <iframe width = 400 heigth = 400 src = "https://www.youtube.com/watch?v=wyguBEc2dw4">
+    <iframe width = "400" heigth = "400" src = "https://www.youtube.com/watch?v=wyguBEc2dw4">
     </iframe>
 </div>
 <div id="personalInfo">
