--- a/mainpages/blog.html
+++ b/mainpages/blog.html
@@ -5,8 +5,7 @@
     <button onclick = "LoadPortfolio();">
         Portfolio
     </button>
-    <iframe width = "400" heigth = "400" src = "https://www.youtube.com/watch?v=wyguBEc2dw4">
-    </iframe>
+    <embed width = "300" heigth = "300" src = "https://www.youtube.com/watch?v=wyguBEc2dw4">
 </div>
 <div id="personalInfo">
     <h1>
