--- a/mainpages/blog.html
+++ b/mainpages/blog.html
@@ -5,6 +5,7 @@
     <button onclick = "LoadPortfolio();">
         Portfolio
     </button>
+    <embed width = "300" heigth = "300" src = "http://www.youtube.com/watch?v=wyguBEc2dw4">
 </div>
 <div id="personalInfo">
     <h1>
