--- a/mainpages/portfolio.html
+++ b/mainpages/portfolio.html
@@ -5,4 +5,17 @@
     <button onclick = "LoadPortfolio();">
         Portfolio
     </button>
+    <embed width = "300" heigth = "300" src = "http://www.youtube.com/watch?v=wyguBEc2dw4">
+</div>
+<div class = "personalInfo">
+    <h1>
+        Dylan's Portfolio
+    </h1>
+    <p>
+        This is my portfolio for my Composition 2 class with Genine Perez!
+    </p>
+</div>
+<div id = "links">
+</div>
+<div id = "folio">
 </div>
