--- a/mainpages/blog.html
+++ b/mainpages/blog.html
@@ -5,9 +5,8 @@
     <button onclick = "LoadPortfolio();">
         Portfolio
     </button>
-    <embed width = "300" heigth = "300" src = "http://www.youtube.com/watch?v=wyguBEc2dw4">
 </div>
-<div id="personalInfo">
+<div class = "personalInfo">
     <h1>
         Dylan's First Year Experience!
     </h1>
@@ -17,5 +16,5 @@
         This blog will be the recording of my experiences for my first semester at UALR.
     </p>
 </div>
-<div id="pagesDiv">
+<div id = "pagesDiv">
 </div>
