--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 				document.getElementById("htmlbody").innerHTML = xmlHttpResponse;
 			}
 			LoadPageAjax(func, "mainpages/portfolio.html", false);
+			LoadPortfolioPages();
+		}
+		function LoadPortfolioPages()
+		{
+
 		}
 		function LoadBlog()
 		{
@@ -28,15 +33,14 @@
 				document.getElementById("htmlbody").innerHTML = xmlHttpResponse;
 			}
 			LoadPageAjax(func, "mainpages/blog.html", false);
-			LoadPages();
+			LoadBlogPages();
 		}
-		function LoadPages()
+		function LoadBlogPages()
 		{
 			var pages = [["11-3-2014.html", "./pictures/foggy.jpg"], ["10-13-2014.html","./pictures/forest.jpg"], ["9-22-2014.html", "./pictures/galaxy.jpg"], ["9-8-2014.html","./pictures/theworldisflat.jpg"], ["8-24-2014.html","./pictures/mountains.jpg"]];
 			for (pageIndex in pages)
 			{
 				var page = ("blog/" + pages[pageIndex][0]);
-
 				var func = function(xmlHttpResponse)
 				{
 					document.getElementById("pagesDiv").innerHTML += xmlHttpResponse;
