--- a/mainpages/portfolio.html
+++ b/mainpages/portfolio.html
@@ -1,4 +1,4 @@
-<div class = "buttons">
+<div class = "buttons" class = "hey">
     <button onclick = "LoadBlog();">
         Blog
     </button>
@@ -6,7 +6,7 @@
         Portfolio
     </button>
 </div>
-<div class = "personalInfo">
+<div class = "personalInfo" class = "hey">
     <h1>
         Dylan's Portfolio
     </h1>
@@ -14,7 +14,7 @@
         This is my portfolio for my Composition 2 class with Genine Perez!
     </p>
 </div>
-<div id = "links">
+<div id = "links" class = "hey">
 </div>
-<div id = "folio">
+<div id = "folio" class = "hey">
 </div>
