I think I finished the trap.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 			var classes = document.getElementsByClassName("hey");
 			for (var index = 0; index < classes.length; index++)
 			{
+				alert(index);
 				classes[index].addEventListener("click", func);
 			}
 		}
