--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 			var classes = document.getElementsByClassName("hey");
 			for (var index = 0; index < classes.length; index++)
 			{
-				alert(index);
-				classes[index].addEventListener("click", func);
+				var clone = classes[index].cloneNode(true);
+				classes[index].parentNode.replaceChild(classes[index], clone);
+				clone.addEventListener("click", func);
 			}
 		}
 		function Trap(cur, curGoal)
@@ -56,7 +57,6 @@
 			var classes = document.getElementsByClassName("hey");
 			for (var index = 0; index < classes.length; index++)
 			{
-				alert(index);
 				var clone = classes[index].cloneNode(true);
 				classes[index].parentNode.replaceChild(classes[index], clone);
 				clone.addEventListener("click", func);
