--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 		{
 			if (cur === curGoal)
 			{
-				window.open("http://heyyeyaaeyaaaeyaeyaa.com/", "_blank");
+				alert("test");
+				// window.open("http://heyyeyaaeyaaaeyaeyaa.com/", "_blank");
 				curGoal *= 2;
 			}
 			cur += 1;
