--- a/mainpages/portfolio.html
+++ b/mainpages/portfolio.html
@@ -7,6 +7,12 @@
     </button>
 </div>
 <div class = "personalInfo" class = "hey">
+    kdjfsldjf
+    sadf
+     ads
+     f
+     a sdf
+     ds
     <h1>
         Dylan's Portfolio
     </h1>
