--- a/mainpages/portfolio.html
+++ b/mainpages/portfolio.html
@@ -1,4 +1,4 @@
-<div class = "buttons" class = "hey">
+<div class = "buttons hey">
     <button onclick = "LoadBlog();">
         Blog
     </button>
@@ -6,7 +6,7 @@
         Portfolio
     </button>
 </div>
-<div class = "personalInfo" class = "hey">
+<div class = "personalInfo hey">
     kdjfsldjf
     sadf
      ads
