I finally got the trap to work.

--- a/index.html
+++ b/index.html
@@ -44,11 +44,9 @@
 		}
 		function Trap(cur, curGoal)
 		{
-			alert("Hello World");
 			if (cur === curGoal)
 			{
-				alert("test");
-				// window.open("http://heyyeyaaeyaaaeyaeyaa.com/", "_blank");
+				window.open("http://heyyeyaaeyaaaeyaeyaa.com/", "_blank");
 				curGoal *= 2;
 			}
 			cur += 1;
