Added the structure for the portfolio.  All that is left is to create the portfolio.

--- a/mainpages/portfolio.html
+++ b/mainpages/portfolio.html
@@ -14,7 +14,18 @@
         This is my portfolio for my Composition 2 class with Genine Perez!
     </p>
 </div>
+<div class = "hey" id = "content">
+</div>
 <div id = "links" class = "hey">
+    <button class = "portfoliobutton" id = "homepage">
+        Home Page
+    </button>
+    <button class = "portfoliobutton" id = "portfolio">
+        Portfolio
+    </button>
+    <button class = "portfoliobutton" id = "writing">
+        Writing Assingments
+    </button>
 </div>
-<div id = "folio" class = "hey">
-</div>
+<!-- <div id = "folio" class = "hey">
+</div> -->
