--- a/mainpages/portfolio.html
+++ b/mainpages/portfolio.html
@@ -14,7 +14,7 @@
         This is my portfolio for my Composition 2 class with Genine Perez!
     </p>
 </div>
-<div id = "links" class = "hey">
+<div id = "links">
     <button class = "portfoliobutton" id = "homepage">
         Home Page
     </button>
@@ -25,5 +25,5 @@
         Writing Assingments
     </button>
 </div>
-<div class = "hey" id = "content">
+<div id = "content">
 </div>
