--- a/mainpages/portfolio.html
+++ b/mainpages/portfolio.html
@@ -6,13 +6,15 @@
         Portfolio
     </button>
 </div>
-<div class = "personalInfo hey">
+<div class = "personalInfo hey headercontent">
     <h1>
         Dylan's Portfolio
     </h1>
     <p>
         This is my portfolio for my Composition 2 class with Genine Perez!
     </p>
+</div>
+<div id = "content" class = "headercontent">
 </div>
 <div id = "links">
     <button class = "portfoliobutton" id = "homepage">
@@ -24,6 +26,4 @@
     <button class = "portfoliobutton" id = "writing">
         Writing Assingments
     </button>
-</div>
-<div id = "content">
 </div>
