--- a/mainpages/portfolio.html
+++ b/mainpages/portfolio.html
@@ -6,15 +6,13 @@
         Portfolio
     </button>
 </div>
-<div class = "personalInfo hey headercontent">
+<div class = "personalInfo hey">
     <h1>
         Dylan's Portfolio
     </h1>
     <p>
         This is my portfolio for my Composition 2 class with Genine Perez!
     </p>
-</div>
-<div id = "content" class = "headercontent">
 </div>
 <div id = "links">
     <button class = "portfoliobutton" id = "homepage">
@@ -26,4 +24,6 @@
     <button class = "portfoliobutton" id = "writing">
         Writing Assingments
     </button>
+</div>
+<div id = "content">
 </div>
