--- a/portfolio/assingments.html
+++ b/portfolio/assingments.html
@@ -1,42 +1,42 @@
 <div id = "assignments">
     <ul>
         <li>
-            <a href = "portfolio/assingmentpdfs/1.pdf">
+            <a href = "portfolio/assingmentpdfs/1.pdf" target = "_blank">
                 Writing Assingment 1
             </a>
         </li>
         <li>
-            <a href = "portfolio/assingmentpdfs/2.pdf">
+            <a href = "portfolio/assingmentpdfs/2.pdf" target = "_blank">
                 Writing Assingment 2
             </a>
         </li>
         <li>
-            <a href = "portfolio/assingmentpdfs/3.pdf">
+            <a href = "portfolio/assingmentpdfs/3.pdf" target = "_blank">
                 Writing Assingment 3
             </a>
         </li>
         <li>
-            <a href = "portfolio/assingmentpdfs/4.pdf">
+            <a href = "portfolio/assingmentpdfs/4.pdf" target = "_blank">
                 Writing Assingment 4
             </a>
         </li>
         <li>
-            <a href = "portfolio/assingmentpdfs/5.pdf">
+            <a href = "portfolio/assingmentpdfs/5.pdf" target = "_blank">
                 Writing Assingment 5
             </a>
         </li>
         <li>
-            <a href = "portfolio/assingmentpdfs/6.pdf">
+            <a href = "portfolio/assingmentpdfs/6.pdf" target = "_blank">
                 Writing Assingment 6
             </a>
         </li>
         <li>
-            <a href = "portfolio/assingmentpdfs/7.pdf">
+            <a href = "portfolio/assingmentpdfs/7.pdf" target = "_blank">
                 Writing Assingment 7
             </a>
         </li>
         <li>
-            <a href = "portfolio/assingmentpdfs/8.pdf">
+            <a href = "portfolio/assingmentpdfs/8.pdf" target = "_blank">
                 Writing Assingment 8
             </a>
         </li>
