--- a/portfolio/assingments.html
+++ b/portfolio/assingments.html
@@ -2,42 +2,42 @@
     <ul>
         <li>
             <a href = "portfolio/assingmentpdfs/1.pdf" target = "_blank">
-                Writing Assingment 1
+                Writing Assignment 1
             </a>
         </li>
         <li>
             <a href = "portfolio/assingmentpdfs/2.pdf" target = "_blank">
-                Writing Assingment 2
+                Writing Assignment 2
             </a>
         </li>
         <li>
             <a href = "portfolio/assingmentpdfs/3.pdf" target = "_blank">
-                Writing Assingment 3
+                Writing Assignment 3
             </a>
         </li>
         <li>
             <a href = "portfolio/assingmentpdfs/4.pdf" target = "_blank">
-                Writing Assingment 4
+                Writing Assignment 4
             </a>
         </li>
         <li>
             <a href = "portfolio/assingmentpdfs/5.pdf" target = "_blank">
-                Writing Assingment 5
+                Writing Assignment 5
             </a>
         </li>
         <li>
             <a href = "portfolio/assingmentpdfs/6.pdf" target = "_blank">
-                Writing Assingment 6
+                Writing Assignment 6
             </a>
         </li>
         <li>
             <a href = "portfolio/assingmentpdfs/7.pdf" target = "_blank">
-                Writing Assingment 7
+                Writing Assignment 7
             </a>
         </li>
         <li>
             <a href = "portfolio/assingmentpdfs/8.pdf" target = "_blank">
-                Writing Assingment 8
+                Writing Assignment 8
             </a>
         </li>
     </ul>
