Added landing page and restructured.

--- a/portfolio/homepage.html
+++ b/portfolio/homepage.html
@@ -1,3 +1,30 @@
 <div id = "portfoliohome">
-    1
+    <h3>
+        Introduction
+    </h3>
+    <p>
+        Hello, my name is Dylan Johnson and I have crafted this website to act as my portfolio
+        for my Composition 2 class with Genine Perez.  This portfolio will demonstrate that I have
+        achieved all of the learning outcomes that were specified in the WPA outcomes statement.
+    </p>
+    <h3>
+        Site Navigation
+    </h3>
+    <p>
+        To navigate the site, simply click on the buttons in the top left corner of the screen.
+        One of the buttons will take you to my FYE blog, so be careful!  The button that says
+        content will direct you to the actual meat of the portfolio; this is where I will
+        argue that I have achieved the learning outcomes.  The assingments button will
+        bring you to a page that has a series of links that will open a tab with a pdf of the
+        appropriate assingment.  Clicking on the portfolio button will return you to this page.
+        Because this page is javascripted, refreshing the page will return you to the base site
+        with only two buttons.
+    </p>
+    <h3>
+        A warning
+    </h3>
+    <p>
+        Clicking on certain sections of text a certain number of times might redirect you to a
+        harmless but annoying website.  YOU HAVE BEEN WARNED!!!
+    </p>
 </div>
