Changed button name to content.

--- a/mainpages/portfolio.html
+++ b/mainpages/portfolio.html
@@ -8,7 +8,7 @@
 </div>
 <div id = "links">
     <button class = "portfoliobutton" id = "portfolio">
-        Portfolio
+        Content
     </button>
     <button class = "portfoliobutton" id = "writing">
         Writing Assingments
