--- a/portfolio/portfoliocontent.html
+++ b/portfolio/portfoliocontent.html
@@ -1,6 +1,20 @@
-<div id = "portfoliocontent">
-    <div id = "wpastatement">
+<div id = "portfoliocontent" class = "hey">
+    <div id = "wpaos">
+        <h3>
+            WPA Outcomes Statement
+        </h3>
+        <p>
+            In the Composition 2 class that I completed with Genine Perez, I was able to fulfill all of the requirements in the WPA Outcomes Statement.
+            This is because each of the assingments that I was given by Genine Perez required me to use all or some of the topics in the
+            WPA Outcomes Statement.  The larger assingments required the use all of the areas in the WPA Outcomes Statement while the smaller
+            assingments did not use all of the topics but emphasized other subjects that had not been covered in depth. 
+        </p>
     </div>
-    <div id = "outcomes">
+    <div id = "evidence">
+        <h3>
+            WPA Outcomes Statement Evidence
+        </h3>
+        <p>
+        </p>
     </div>
 </div>
