--- a/portfolio/portfoliocontent.html
+++ b/portfolio/portfoliocontent.html
@@ -1,20 +1,41 @@
-<div id = "portfoliocontent" class = "hey">
-    <div id = "wpaos">
+<div id = "portfoliocontent">
+    <div id = "wpaos" class = "hey">
         <h3>
             WPA Outcomes Statement
         </h3>
         <p>
             In the Composition 2 class that I completed with Genine Perez, I was able to fulfill all of the requirements in the WPA Outcomes Statement.
-            This is because each of the assingments that I was given by Genine Perez required me to use all or some of the topics in the
+            All of the assingments that I was given by Genine Perez required me to use all or some of the topics in the
             WPA Outcomes Statement.  The larger assingments required the use all of the areas in the WPA Outcomes Statement while the smaller
-            assingments did not use all of the topics but emphasized other subjects that had not been covered in depth. 
+            assingments did not use all of the topics but emphasized other subjects that had not been covered in depth.  However, the processes topic
+            in the WPA Outcomes Statement was not emphasized enough in our assingments.
         </p>
     </div>
-    <div id = "evidence">
+    <div id = "evidence" class = "hey">
+        <h3>
+            Composing in electronic environments.
+        </h3>
+        <p>
+            All of the assingments in this class, except for the peer edits, were composed in electronic environments.  I used the Google Cloud
+            storage infrastructure to store assingments and notes and used the Google Documents program to compose all of my assingments.
+            For all of my assingments I use the Google Search Engine to conduct research for my paper.  This was especally important for the paper
+            that I wrote on genetically modified crops.  That paper made extensive use of government websites and databases so that I could gather
+            information for my paper.  The only use that I made for hardcopies was when I was doing peer edits and when I was turning assingments
+            in to Genine Perez.
+        </p>
         <h3>
             WPA Outcomes Statement Evidence
         </h3>
+        <h5>
+            Assingment 1: Essay on the evolution of an opinion.
+        </h5>
         <p>
+            The first assingment that we were given was a paper that was intended to document the evolution of my opinion on a particular topic.
+            This assingment helped me achieve the WPA Outcomes Statement because it forced me to introspective that think critically about
+            a specific topic.  To write this paper, I had to introduce the reader to a topic and keep their attention as I described what the
+            paper was about and gave them a detailed narrative about my personal views on this topic.  This required me to be
+            capable in rhetorical knowledge as well as critical thinking, reading, and writing.  Genine Perez also required me to use the MLA
+            format, which required at least some knowledge of writing conventions.
         </p>
     </div>
 </div>
