--- a/portfolio/portfoliocontent.html
+++ b/portfolio/portfoliocontent.html
@@ -15,9 +15,9 @@
         <h3>
             WPA Outcomes Statement Evidence
         </h3>
-        <h5>
+        <h4>
             Composing in electronic environments.
-        </h5>
+        </h4>
         <p>
             All of the assingments in this class, except for the peer edits, were composed in electronic environments.  I used the Google Cloud
             storage infrastructure to store assingments and notes and used the Google Documents program to compose all of my assingments.
@@ -26,9 +26,9 @@
             information for my paper.  The only use that I made for hardcopies was when I was doing peer edits and when I was turning assingments
             in to Genine Perez.
         </p>
-        <h5>
+        <h4>
             Assingment 1: Essay on the evolution of an opinion.
-        </h5>
+        </h4>
         <p>
             The first assingment that we were given was a paper that was intended to document the evolution of my opinion on a particular topic.
             This assingment helped me achieve the WPA Outcomes Statement because it forced me to introspective that think critically about
@@ -36,6 +36,40 @@
             paper was about and gave them a detailed narrative about my personal views on this topic.  This required me to be
             capable in rhetorical knowledge as well as critical thinking, reading, and writing.  Genine Perez also required me to use the MLA
             format, which required at least some knowledge of writing conventions.
+        </p>
+        <h4>
+            Assingments 3 and 4
+        </h4>
+        <p>
+            Assingments 3 and 4 were important because they taught me more about conventions.  The purpose of assingments 3 and 4 was to use the
+            fundamentals of a classical argument to begin to construct an argument.  In assingment 3 I had to learn how to create an enthymeme
+            and warrant as well as figure out appropriate grounds, backing, and conditions of rebuttal.  This was espeically usefull in the
+            development of my rhetorical knowledge because I had to learn how to construct and argument using a new technique.  Assingment 4
+            required me to expand on assingment 3 by adding an entire thesis to my developing argument.  This of course required critical thinking
+            as well as reading and writing skills because the construction of a thesis requires a skillful introduction to a topic ending with a
+            compound-complex sentance that states you position and argument on the subject with no room for interpretation.
+        </p>
+        <h4>
+            Assingment 7
+        </h4>
+        <p>
+            Assingment 7 was the full paper that resulted from assingment 3 and 4.  Assingment 7 was more important for the development of process
+            than the other assingments because this was a large project that went through two revisions and was peer edited by three people.  Unfortunately, I do
+            not have the first draft.  To peer edit, I printed off three copies of the paper and had by classmates read and mark them.  I did the same
+            to their papers.  Peer editing helps in the development of process but it also helps develop your critical thinking abilities and reading
+            abilities.  It requires a fluent command of the english language and the ability to understand what the writer was attempting to say and how to
+            imporove their paper.  This paper was also required me to use Knowledge of Conventions because I had to format the paper in MLA as well as
+            structure the paper and sentance length so that it was not confusing or boring.
+        </p>
+        <h4>
+            Assingment 8
+        </h4>
+        <p>
+            Assingment 8 was an intext visual argument.  Assingment 8 was useful in the development of rhetorical knowledge because I had to develop a
+            different type of argument.  I had to find or create an image that had an argument "embedded" in it.  In this assingment I had to find an issue
+            of opinion and find a way to communicate this issue or opinion to the largest possible number of people.  This required creativity and
+            an understanding of globally understood symbols.  This assingment also required a knowledge of how to compose in electronic requirements as well as an ability to perform google 
+            searches.  In this assingment I completed the written part on google docs and uploaded the selected image to the page.
         </p>
     </div>
 </div>
