--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 			<ul>
 				<li>
 					<a href = "pdf/resume.pdf" target = "_blank">
-						My resume.
+						Dylan's Resume.
 					</a>
 				</li>
 			</ul>
