--- a/index.html
+++ b/index.html
@@ -3,22 +3,18 @@
 		<link rel = "stylesheet" type = "text/css" href = "css/index.css">
 	</head>
 	<body>
+		<div id = "header">
+			<h1>
+				Dylan Conrad Johnson
+			</h1>
+			<p>
+				This is Dylan's personal Github website. Hosting courtesy of Github.
+			</p>
+		</div>
 		<div id = "content">
-			<ul>
-				<li>
-					<h1>
-						Dylan Conrad Johnson
-					</h1>
-					<p>
-						This is Dylan's personal Github website. Hosting courtesy of Github.
-					</p>
-				</li>
-				<li>
-					<a href = "pdf/resume.pdf" target = "_blank">
-						Dylan's Resume.
-					</a>
-				</li>
-			</ul>
+			<a href = "pdf/resume.pdf" target = "_blank">
+				Dylan's Resume.
+			</a>
 		</div>
 	</body>
 </html>
