First commit of new site.

--- a/index.html
+++ b/index.html
@@ -3,18 +3,31 @@
 		<link rel = "stylesheet" type = "text/css" href = "css/index.css">
 	</head>
 	<body>
-		<div id = "header">
+		<div id = "navbar">
+			<ul>
+				<li>
+					<button>
+						Contact
+					</button>
+				</li>
+				<li>
+					<button>
+						Resume
+					</button>
+				</li>
+			</ul>
+		</div>
+		<div id = "intro">
 			<h1>
-				Dylan Conrad Johnson
+				Dylan Johnson
 			</h1>
 			<p>
-				This is Dylan's personal Github website. Hosting courtesy of Github.
+				I am a computer science student at the University of Arkansas at Little Rock.
+				This landing page contains some of my current and past projects.
+				All of the projects listed below are hosted on my github.
 			</p>
 		</div>
 		<div id = "content">
-			<a href = "pdf/resume.pdf" target = "_blank">
-				Dylan's Resume.
-			</a>
 		</div>
 	</body>
 </html>
