--- a/index.html
+++ b/index.html
@@ -3,31 +3,18 @@
 		<link rel = "stylesheet" type = "text/css" href = "css/index.css">
 	</head>
 	<body>
-		<div id = "navbar">
-			<ul>
-				<li>
-					<button>
-						Contact
-					</button>
-				</li>
-				<li>
-					<button>
-						Resume
-					</button>
-				</li>
-			</ul>
-		</div>
-		<div id = "intro">
+		<div id = "header">
 			<h1>
-				Dylan Johnson
+				Dylan Conrad Johnson
 			</h1>
 			<p>
-				I am a computer science student at the University of Arkansas at Little Rock.
-				This landing page contains some of my current and past projects.
-				All of the projects listed below are hosted on my github.
+				This is Dylan's personal Github website. Hosting courtesy of Github.
 			</p>
 		</div>
 		<div id = "content">
+			<a href = "pdf/resume.pdf" target = "_blank">
+				Dylan's Resume.
+			</a>
 		</div>
 	</body>
 </html>
