--- a/pages/resume.html
+++ b/pages/resume.html
@@ -6,5 +6,8 @@
 		The button below will take you to my resume.  I made it with Latex.
 	</p>
 	<button>
+		<a href = "../pdf/resume.pdf" target = "_blank">
+			My Resume.
+		</a>
 	</button>
 </div>
