--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 		<div id = "navbar">
 			<ul>
 				<li>
-					<button>
+					<button onclick = "loadProjects()">
 						Projects
 					</button>
 				</li>
 				<li>
-					<button>
+					<button onclick = "loadResume()">
 						Resume
 					</button>
 				</li>
