Landing page and javascript.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 						Resume
 					</button>
 				</li>
+				<li>
+					<button onclick = "loadContact()">
+						Contact
+					</button>
+				</li>
 			</ul>
 		</div>
 		<div id = "header">
