--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,13 +4,13 @@
 	</h3>
 	<ul>
 		<li>
-			Github: <a href = "" target = "_blank"></a>
+			Github: <a href = "https://github.com/dcjohnson" target = "_blank"> https://github.com/dcjohnson </a>
 		</li>
 		<li>
-			Linkedin: <a href = "" target = "_blank"></a>
+			Linkedin: <a href = "www.linkedin.com/in/dylanjohnson1" target = "_blank"> www.linkedin.com/in/dylanjohnson1 </a>
 		</li>
 		<li>
-			email: dylanatasmsa@gmail.com 
-		</li>
+			email: <a href = "mailto:dylanatasmsa@gmail.com"> dylanatasmsa@gmail.com </a>
+		 </li>
 	</ul>
 </div>
