--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,7 @@
 			Github: <a href = "https://github.com/dcjohnson" target = "_blank"> https://github.com/dcjohnson </a>
 		</li>
 		<li>
-			Linkedin: <a href = "www.linkedin.com/in/dylanjohnson1" target = "_blank"> www.linkedin.com/in/dylanjohnson1 </a>
+			Linkedin: <a href = "https://www.linkedin.com/in/dylanjohnson1" target = "_blank"> https://www.linkedin.com/in/dylanjohnson1 </a>
 		</li>
 		<li>
 			email: <a href = "mailto:dylanatasmsa@gmail.com"> dylanatasmsa@gmail.com </a>
