--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,6 +4,7 @@
 			<h3>
 				Hackit
 			</h3>
+			<a href = "https://github.com/dcjohnson/hackit" target = "_blank"> https://github.com/dcjohnson/hackit </a>
 			<p>
 				It is hacked together; get it?  Anyway, this is my first foray into the world of compilers and
 				interpreters.  As a result, it is rather "hacked" together.
