Begin adding css.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -10,5 +10,14 @@
 				interpreters.  As a result, it is rather "hacked" together.
 			</p>
 		</li>
+		<li>
+			<h3>
+				CodeBin
+			</h3>
+			<a href = "https://github.com/dcjohnson/CodeBin" target = "_blank"> https://github.com/dcjohnson/CodeBin </a>
+			<p>
+				A rewrite of an online python ide that a friend and I wrote in high school.  The rewrite uses Django.
+			</p>
+		</li>
 	</ul>
 </div>
