--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 	<head>
 		<link rel = "stylesheet" type = "text/css" href = "css/index.css">
+		<link rel = "stylesheet" type = "text/css" href = "css/contact.css">
+		<link rel = "stylesheet" type = "text/css" href = "css/projects.css">
+		<link rel = "stylesheet" type = "text/css" href = "css/resume.css">
 		<script src = "./js/page-nav.js"></script>
 	</head>
 	<body onload = "loadProjects()">
