--- a/pages/resume.html
+++ b/pages/resume.html
@@ -2,12 +2,9 @@
 	<h1>
 		Resume
 	</h1>
-	<p>
-		The button below will take you to my resume.  I made it with Latex.
-	</p>
-	<button>
-		<a href = "../pdf/resume.pdf" target = "_blank">
-			My Resume.
+	<object data = "../pdf/resume.pdf" type = "application/pdf" width = "100%" height = "100%">
+		<a href = "../pdf/resume.pdf">
+			My Resume
 		</a>
-	</button>
+	</object>
 </div>
