--- a/presentations/speech/index.html
+++ b/presentations/speech/index.html
@@ -41,20 +41,73 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Reveal.js</h1>
-					<h3>The HTML Presentation Framework</h3>
+					<h1>
+						Speech
+					</h1>
+					<h3>
+						Service Learning Project 3
+					</h3>
 					<p>
-						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
+						Student Volunteer IEEE VR
+					</p>
+					<p>
+						<small>
+							Created by Dylan Johnson
+						</small>
 					</p>
 				</section>
 
 				<section>
-					<h2>Hello There</h2>
-					<p>
-						reveal.js enables you to create beautiful interactive slide decks using HTML. This presentation will show you examples of what it can do.
-					</p>
+					<h2>
+						Work Service
+					</h2>
+					<ul>
+						<li>
+							Completed work service as a student volunteer.
+						</li>
+						<li>
+							Volunteered at the IEEE VR 2015 conference.
+						</li>
+						<li>
+							Purpose of the conference was to promote sharing of information
+							and collaboration between scientests.
+						</li>
+						<li>
+							Also improve ties with industry.
+						</li>
+					</ul>
 				</section>
-				
+
+				<section>
+					<h2>
+						Communication concepts and principles
+					</h2>
+					<ul>
+						<li>
+							Nonverbal Communication
+						</li>
+						<li>
+							Verbal Communication
+						</li>
+						<li>
+							Communication is adaptable
+						</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>
+						Civil and ethical implications
+					</h2>
+					<ul>
+						<li>
+							Trustworthiness: the accuracy and dependability of the information that you and your peers are sharing
+						</li>
+						<li>
+							Responsibility: readiness of individuals to “own up” to their mistakes and take responsibility for their actions
+						</li>
+					</ul>
+				</section>
 			</div>
 
 		</div>
@@ -67,7 +120,7 @@
 			// Full list of configuration options available at:
 			// https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
-				controls: true,
+				controls: false,
 				progress: true,
 				history: true,
 				center: true,
