--- a/presentations/speech/index.html
+++ b/presentations/speech/index.html
@@ -63,17 +63,17 @@
 					</h2>
 					<ul>
 						<li>
-							Completed work service as a student volunteer.
+							Completed work service as a student volunteer
 						</li>
 						<li>
-							Volunteered at the IEEE VR 2015 conference.
+							Volunteered at the IEEE VR 2015 conference
 						</li>
 						<li>
 							Purpose of the conference was to promote sharing of information
-							and collaboration between scientests.
+							and collaboration between scientests
 						</li>
 						<li>
-							Also improve ties with industry.
+							Also improve ties with industry
 						</li>
 					</ul>
 				</section>
