--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link rel = "stylesheet" type = "text/css" href = "css/contact.css">
 		<link rel = "stylesheet" type = "text/css" href = "css/projects.css">
 		<link rel = "stylesheet" type = "text/css" href = "css/resume.css">
-		<script src = "./js/page-nav.js"></script>
+		<script src = "./js/page-nav.js" defer></script>
 	</head>
 	<body onload = "loadProjects()">
 		<div id = "navbar">
