--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
 		<link rel = "stylesheet" type = "text/css" href = "css/resume.css">
 		<script src = "./js/page-nav.js" defer></script>
 	</head>
-	<body onload = "loadProjects()">
+	<body>
 		<div id = "navbar">
 			<ul>
 				<li>
-					<button onclick = "loadProjects()">
+					<button>
 						Projects
 					</button>
 				</li>
 				<li>
-					<button onclick = "loadResume()">
+					<button>
 						Resume
 					</button>
 				</li>
 				<li>
-					<button onclick = "loadContact()">
+					<button>
 						Contact
 					</button>
 				</li>
