--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 		<div id = "navbar">
 			<ul>
 				<li>
-					<button>
+					<button id = "projects">
 						Projects
 					</button>
 				</li>
 				<li>
-					<button>
+					<button id = "resume">
 						Resume
 					</button>
 				</li>
 				<li>
-					<button>
+					<button id = "contact">
 						Contact
 					</button>
 				</li>
