removed presentations and began updating projects page.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,7 +4,9 @@
 			<h3>
 				Hackit
 			</h3>
-			<a href = "https://github.com/dcjohnson/hackit" target = "_blank"> https://github.com/dcjohnson/hackit </a>
+			<a href = "https://github.com/dcjohnson/hackit" target = "_blank">
+				https://github.com/dcjohnson/hackit
+			</a>
 			<p>
 				It is hacked together; get it?  Anyway, this is my first foray into the world of compilers and
 				interpreters.  As a result, it is rather "hacked" together.
@@ -14,10 +16,20 @@
 			<h3>
 				CodeBin
 			</h3>
-			<a href = "https://github.com/dcjohnson/CodeBin" target = "_blank"> https://github.com/dcjohnson/CodeBin </a>
+			<a href = "https://github.com/dcjohnson/CodeBin" target = "_blank">
+				https://github.com/dcjohnson/CodeBin
+			</a>
 			<p>
 				A rewrite of an online python ide that a friend and I wrote in high school.  The rewrite uses Django.
 			</p>
+		</li>
+		<li>
+			<h3>
+				Hackit-v2
+			</h3>
+			<a href = "https://github.com/dcjohnson/Hackit-v2" target = "_blank">
+				https://github.com/dcjohnson/Hackit-v2
+			</a>
 		</li>
 	</ul>
 </div>
