--- a/pages/projects.html
+++ b/pages/projects.html
@@ -30,6 +30,9 @@
 			<a href = "https://github.com/dcjohnson/Hackit-v2" target = "_blank">
 				https://github.com/dcjohnson/Hackit-v2
 			</a>
+			<p>
+				I am rewriting my Hackit project from scratch in the Rust language.
+			</p>
 		</li>
 	</ul>
 </div>
