--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 			<p>
 				I am a computer science student at the University of Arkansas at Little Rock.
 				This site contains descriptions of my current projects as well as my resume.
+				Currently I am in Utah while I intern at Ancestry.com.
 			</p>
 		</div>
 		<div id = "content">
